/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Crystal Gagne
 */

package ucf.assignments;

public class LoadFile
{
    public void writeSingleToDoExcel() {
        // Calls getUserInput to get the file name to load from
        // Get name of user file
              // Parse the csv
                // Display error if the csv is not found
        // Using an Observable List, that data will be read from a csv (...)
            // Read each row
                // for each row, add the data to the table
    }
}
