/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Crystal Gagne
 */

package ucf.assignments;

import java.io.*;

public class SaveFile
{
    public void writeSingleToDoExcel() {
        // Calls getUserInput to get the file name to save to
        // Using a writer, that data will be written to a csv (...)
            // (...) as a string, separated by commas
    }
}
