/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Crystal Gagne
 */


package ucf.assignments;

public class UserInput
{
    // This class needs to get a string from a user using a simple scanner.
        // getUserInput ()
            // scanner = userInput
                // return userInput
}
