@startuml
'https://plantuml.com/class-diagram

class ToDo {
    main()
    start()
}

class ToDo_Controller
{
    initialize()
    changeDescriptionCellEvent(CellEditEvent editedCell)
    changeDueDateCellEvent(CellEditEvent editedCell)
    saveToDoFile(ActionEvent clickedSaveFile)
    loadToDoFile(ActionEvent clickedLoadFile)
    addItemToList(ActionEvent clickedAddItem)
    removeItemFromList(ActionEvent clickedRemoveItem)
    displayHelp(ActionEvent clickedHelpButton)

}
class UserInput
{
    getUserInput()
        return userFileName
}

class SaveFile
{
    public void writeSingleToDoExcel(String userFileName)
}

class LoadFile
{
    writeSingleToDoExcel(String userFileName)
}

class Creator_ObservableList
{
    genObservableList()
}

class SingleToDo
{
        SimpleBooleanProperty status;
        LocalDate dueDate;
        SimpleStringProperty description;
}

class DatePickerCell
{
    DatePickerCell(ObservableList<List_of_Entries> dueDateEntry)
    updateDueDate(Date dueDate, boolean empty)
    createDatePicker()
}


javaFX.Application <|-- ToDo

ToDo <|-- ToDo_Controller
ToDo_Controller <|--- Creator_ObservableList
Creator_ObservableList <|-- SingleToDo

SaveFile <-- UserInput
LoadFile <-- UserInput


ToDo_Controller <-- SaveFile
ToDo_Controller <-- LoadFile

DatePickerCell --|> ToDo_Controller



@enduml